--- a/pages/services.html
+++ b/pages/services.html
@@ -1,9 +1,83 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
      <title>TechReports</title>
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 <body>
-<h1>Usługi</h1>
+     <div class="services_page">
+          <div class="services_container">
+               <div class="services">
+                    <h1 class="service_title">Oferta usług</h1>
+                    <div class="full_width_line"></div>
+                    <div class="service_text">W TechReports łączymy innowacyjne rozwiązania IT z indywidualnym
+                         podejściem do potrzeb biznesowych naszych klientów. Specjalizujemy się w tworzeniu i
+                         implementacji oprogramowania, które nie tylko rozwiązuje bieżące wyzwania, ale również wspiera
+                         rozwój biznesu. Nasz zespół ekspertów w zakresie zarządzania zgłoszeniami IT gwarantuje
+                         skuteczność i efektywność, dopasowując technologie do unikalnych wymagań każdej organizacji.
+                         Wybierz TechReports, by osiągnąć swój sukces w świecie cyfrowym.
+
+                    </div>
+               </div>
+               <div class="services_photo_container">
+                    <img class="services_photo" src="/images/service.jpeg" alt="services">
+               </div>
+          </div>
+          <div class="companies_container">
+               <img class="company_img" id="sale" src="/images/salesforceCompany.png" alt="cloudity logo">
+               <img class="company_img" id="porsch" src="/images/porsche.png" alt="porsche logo">
+               <img class="company_img" id="visa" src="/images/visa.png" alt="visa logo">
+               <img class="company_img" id="abb" src="/images/abb.png" alt="abb logo">
+               <img class="company_img" id="gsk" src="/images/gsk.png" alt="gsk logo">
+          </div>
+          <div class="success_history_container">
+               <div class="success_history">
+                    <h1 class="success_history_title">Historie sukcesu</h1>
+                    <div class="full_width_line"></div>
+                    <div class="success_history_text">Jesteśmy wybierani przez liderów branżowych i rynkowych jako
+                         zaufany partner w realizacji projektów cyfrowych. Nasza renoma wynika z umiejętności
+                         dostarczania spersonalizowanych rozwiązań, które precyzyjnie odpowiadają na specyficzne
+                         potrzeby i charakter działalności naszych klientów. Kluczem do sukcesu, który odnoszą, jest
+                         nasze pragmatyczne podejście, zawsze kładące nacisk na indywidualne oczekiwania i cele każdego
+                         z nich.
+                    </div>
+               </div>
+               <div class="video_container">
+                    <iframe class="yt_container" src="https://www.youtube.com/embed/BgOvC59hLSo">
+                    </iframe>
+                    <iframe class="yt_container" src="https://www.youtube.com/embed/LNlpRmqu9BY">
+                    </iframe>
+                    <iframe class="yt_container" src="https://www.youtube.com/embed/4zuy1G0DfGg">
+                    </iframe>
+               </div>
+          </div>
+          <div class="certificates_container">
+               <h1 class="certificates_title">Nasze certyfikaty</h1>
+               <div class="full_width_line"></div>
+               <section id="carousel">
+                    <div id="carousel_inner">
+                         <div class="slide_image" id="slide1">
+                         </div>
+                         <div class="slide_image" id="slide2">
+                         </div>
+                         <div class="slide_image" id="slide3">
+                         </div>
+                         <div class="slide_image" id="slide4">
+                         </div>
+                         <div class="slide_image" id="slide5">
+                         </div>
+                    </div>
+               </section>
+               <div class="certificates_text">
+                    W TechReports z dumą prezentujemy nasz zakres profesjonalnych certyfikatów, które potwierdzają nasze
+                    kompetencje i zaangażowanie w dostarczanie usług najwyższej jakości. Nasze wyróżnienia to wynik
+                    ciągłego rozwoju i dążenia do doskonałości w dziedzinie innowacyjnych technologii.
+               </div>
+          </div>
+
+
+
+     </div>
 </body>
