--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
      <link rel="preconnect" href="https://fonts.googleapis.com">
-     <link rel="preconnect" href="https://fonts.googleapis.com">
-     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
      <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
           rel="stylesheet">
           
@@ -137,8 +135,9 @@
                </div>
           </div>
      </div>
-     <div id="clock"></div>
+    
      <footer class="footer_section">
+          <div id="clock"></div>
           <p class="copyright">© 2023 TechReports</p>
      </footer>
      <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
@@ -148,6 +147,7 @@
      <script src="jQuery/slideShowContact.js"></script>
      <script src="jQuery/numberAnimation.js"></script>
      <script src="jQuery/dynamicList.js"></script>
+     <script src="jQuery/logoCarousel.js"></script>
 
      <script src="js/pageLoader.js"></script>
      <script src="js/dynamicWord.js"></script>
