--- a/pages/technologies.html
+++ b/pages/technologies.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
      <title>TechReports</title>
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 <body>
      <div class="technologies_page">
           <div class="technologies_and_list">
@@ -49,7 +51,11 @@
                          </div>
                          <div class="benefit_card_title">Dostęp do Specjalistycznych Talentów IT
                          </div>
-                         <div class="benefit_card_text">TechReports specjalizuje się w różnorodnych technologiach IT. Pomagamy organizacjom szybko zdobyć specjalistyczne umiejętności niezbędne do zarządzania zgłoszeniami i innymi aspektami IT. Nasz zespół ekspercki posiada głęboką wiedzę w dziedzinach front-end, back-end, a także w zakresie oprogramowania pośredniczącego, co umożliwia nam obsługę różnych języków programowania i platform.
+                         <div class="benefit_card_text">TechReports specjalizuje się w różnorodnych technologiach IT.
+                              Pomagamy organizacjom szybko zdobyć specjalistyczne umiejętności niezbędne do zarządzania
+                              zgłoszeniami i innymi aspektami IT. Nasz zespół ekspercki posiada głęboką wiedzę w
+                              dziedzinach front-end, back-end, a także w zakresie oprogramowania pośredniczącego, co
+                              umożliwia nam obsługę różnych języków programowania i platform.
                          </div>
                     </div>
                     <div class="benefit_card">
@@ -58,7 +64,11 @@
                          </div>
                          <div class="benefit_card_title">Dostęp do Specjalistycznych Talentów IT
                          </div>
-                         <div class="benefit_card_text">TechReports specjalizuje się w różnorodnych technologiach IT. Pomagamy organizacjom szybko zdobyć specjalistyczne umiejętności niezbędne do zarządzania zgłoszeniami i innymi aspektami IT. Nasz zespół ekspercki posiada głęboką wiedzę w dziedzinach front-end, back-end, a także w zakresie oprogramowania pośredniczącego, co umożliwia nam obsługę różnych języków programowania i platform.
+                         <div class="benefit_card_text">TechReports specjalizuje się w różnorodnych technologiach IT.
+                              Pomagamy organizacjom szybko zdobyć specjalistyczne umiejętności niezbędne do zarządzania
+                              zgłoszeniami i innymi aspektami IT. Nasz zespół ekspercki posiada głęboką wiedzę w
+                              dziedzinach front-end, back-end, a także w zakresie oprogramowania pośredniczącego, co
+                              umożliwia nam obsługę różnych języków programowania i platform.
                          </div>
                     </div>
                     <div class="benefit_card">
@@ -67,7 +77,11 @@
                          </div>
                          <div class="benefit_card_title">Dostęp do Specjalistycznych Talentów IT
                          </div>
-                         <div class="benefit_card_text">TechReports specjalizuje się w różnorodnych technologiach IT. Pomagamy organizacjom szybko zdobyć specjalistyczne umiejętności niezbędne do zarządzania zgłoszeniami i innymi aspektami IT. Nasz zespół ekspercki posiada głęboką wiedzę w dziedzinach front-end, back-end, a także w zakresie oprogramowania pośredniczącego, co umożliwia nam obsługę różnych języków programowania i platform.
+                         <div class="benefit_card_text">TechReports specjalizuje się w różnorodnych technologiach IT.
+                              Pomagamy organizacjom szybko zdobyć specjalistyczne umiejętności niezbędne do zarządzania
+                              zgłoszeniami i innymi aspektami IT. Nasz zespół ekspercki posiada głęboką wiedzę w
+                              dziedzinach front-end, back-end, a także w zakresie oprogramowania pośredniczącego, co
+                              umożliwia nam obsługę różnych języków programowania i platform.
                          </div>
                     </div>
                     <div class="benefit_card">
@@ -76,7 +90,11 @@
                          </div>
                          <div class="benefit_card_title">Dostęp do Specjalistycznych Talentów IT
                          </div>
-                         <div class="benefit_card_text">TechReports specjalizuje się w różnorodnych technologiach IT. Pomagamy organizacjom szybko zdobyć specjalistyczne umiejętności niezbędne do zarządzania zgłoszeniami i innymi aspektami IT. Nasz zespół ekspercki posiada głęboką wiedzę w dziedzinach front-end, back-end, a także w zakresie oprogramowania pośredniczącego, co umożliwia nam obsługę różnych języków programowania i platform.
+                         <div class="benefit_card_text">TechReports specjalizuje się w różnorodnych technologiach IT.
+                              Pomagamy organizacjom szybko zdobyć specjalistyczne umiejętności niezbędne do zarządzania
+                              zgłoszeniami i innymi aspektami IT. Nasz zespół ekspercki posiada głęboką wiedzę w
+                              dziedzinach front-end, back-end, a także w zakresie oprogramowania pośredniczącego, co
+                              umożliwia nam obsługę różnych języków programowania i platform.
                          </div>
                     </div>
                     <div class="benefit_card">
@@ -85,7 +103,11 @@
                          </div>
                          <div class="benefit_card_title">Dostęp do Specjalistycznych Talentów IT
                          </div>
-                         <div class="benefit_card_text">TechReports specjalizuje się w różnorodnych technologiach IT. Pomagamy organizacjom szybko zdobyć specjalistyczne umiejętności niezbędne do zarządzania zgłoszeniami i innymi aspektami IT. Nasz zespół ekspercki posiada głęboką wiedzę w dziedzinach front-end, back-end, a także w zakresie oprogramowania pośredniczącego, co umożliwia nam obsługę różnych języków programowania i platform.
+                         <div class="benefit_card_text">TechReports specjalizuje się w różnorodnych technologiach IT.
+                              Pomagamy organizacjom szybko zdobyć specjalistyczne umiejętności niezbędne do zarządzania
+                              zgłoszeniami i innymi aspektami IT. Nasz zespół ekspercki posiada głęboką wiedzę w
+                              dziedzinach front-end, back-end, a także w zakresie oprogramowania pośredniczącego, co
+                              umożliwia nam obsługę różnych języków programowania i platform.
                          </div>
                     </div>
                     <div class="benefit_card">
@@ -94,11 +116,14 @@
                          </div>
                          <div class="benefit_card_title">Dostęp do Specjalistycznych Talentów IT
                          </div>
-                         <div class="benefit_card_text">TechReports specjalizuje się w różnorodnych technologiach IT. Pomagamy organizacjom szybko zdobyć specjalistyczne umiejętności niezbędne do zarządzania zgłoszeniami i innymi aspektami IT. Nasz zespół ekspercki posiada głęboką wiedzę w dziedzinach front-end, back-end, a także w zakresie oprogramowania pośredniczącego, co umożliwia nam obsługę różnych języków programowania i platform.
+                         <div class="benefit_card_text">TechReports specjalizuje się w różnorodnych technologiach IT.
+                              Pomagamy organizacjom szybko zdobyć specjalistyczne umiejętności niezbędne do zarządzania
+                              zgłoszeniami i innymi aspektami IT. Nasz zespół ekspercki posiada głęboką wiedzę w
+                              dziedzinach front-end, back-end, a także w zakresie oprogramowania pośredniczącego, co
+                              umożliwia nam obsługę różnych języków programowania i platform.
                          </div>
                     </div>
                </div>
-
           </div>
      </div>
 </body>
