--- a/pages/services.html
+++ b/pages/services.html
@@ -56,7 +56,7 @@
           <div class="certificates_container">
                <h1 class="certificates_title">Nasze certyfikaty</h1>
                <div class="full_width_line"></div>
-               <section id="carousel">
+               <div id="carousel">
                     <div id="carousel_inner">
                          <div class="slide_image" id="slide1">
                          </div>
@@ -69,7 +69,7 @@
                          <div class="slide_image" id="slide5">
                          </div>
                     </div>
-               </section>
+               </div>
                <div class="certificates_text">
                     W TechReports z dumą prezentujemy nasz zakres profesjonalnych certyfikatów, które potwierdzają nasze
                     kompetencje i zaangażowanie w dostarczanie usług najwyższej jakości. Nasze wyróżnienia to wynik
