sevices ver-2 final

--- a/pages/services.html
+++ b/pages/services.html
@@ -36,13 +36,13 @@
                <div class="success_history">
                     <h1 class="success_history_title">Historie sukcesu</h1>
                     <div class="full_width_line"></div>
-                    <div class="success_history_text">Jesteśmy wybierani przez liderów branżowych i rynkowych jako
+                    <p class="success_history_text">Jesteśmy wybierani przez liderów branżowych i rynkowych jako
                          zaufany partner w realizacji projektów cyfrowych. Nasza renoma wynika z umiejętności
                          dostarczania spersonalizowanych rozwiązań, które precyzyjnie odpowiadają na specyficzne
                          potrzeby i charakter działalności naszych klientów. Kluczem do sukcesu, który odnoszą, jest
                          nasze pragmatyczne podejście, zawsze kładące nacisk na indywidualne oczekiwania i cele każdego
                          z nich.
-                    </div>
+                    </p>
                </div>
                <div class="video_container">
                     <iframe class="yt_container" src="https://www.youtube.com/embed/BgOvC59hLSo">
