--- a/pages/technologies.html
+++ b/pages/technologies.html
@@ -42,7 +42,7 @@
                </div>
           </div>
           <div class="benefits_container">
-               <h1>Co zyskujesz, wybierając TechReports?</h1>
+               <h1 class="benefits_title">Co zyskujesz, wybierając TechReports?</h1>
                <div class="full_width_line"></div>
                <div class="benefits_cards_container">
                     <div class="benefit_card">
@@ -62,65 +62,57 @@
                          <div class="benefit_card_number">
                               <span class="number_card">2</span>
                          </div>
-                         <div class="benefit_card_title">Dostęp do Specjalistycznych Talentów IT
+                         <div class="benefit_card_title">Wolność Skupienia się na Core Business
                          </div>
-                         <div class="benefit_card_text">TechReports specjalizuje się w różnorodnych technologiach IT.
-                              Pomagamy organizacjom szybko zdobyć specjalistyczne umiejętności niezbędne do zarządzania
-                              zgłoszeniami i innymi aspektami IT. Nasz zespół ekspercki posiada głęboką wiedzę w
-                              dziedzinach front-end, back-end, a także w zakresie oprogramowania pośredniczącego, co
-                              umożliwia nam obsługę różnych języków programowania i platform.
+                         <div class="benefit_card_text">Posiadając wszechstronny zespół ekspertów IT, TechReports zapewnia płynną 
+                              realizację projektów IT bez zakłócania Twoich procesów biznesowych. Dzięki temu zyskujesz czas i przestrzeń 
+                              do koncentracji na kluczowych obszarach strategicznych Twojej działalności.
                          </div>
                     </div>
                     <div class="benefit_card">
                          <div class="benefit_card_number">
                               <span class="number_card">3</span>
                          </div>
-                         <div class="benefit_card_title">Dostęp do Specjalistycznych Talentów IT
+                         <div class="benefit_card_title">Ciągłe Utrzymanie i Rozwój Systemów IT
                          </div>
-                         <div class="benefit_card_text">TechReports specjalizuje się w różnorodnych technologiach IT.
-                              Pomagamy organizacjom szybko zdobyć specjalistyczne umiejętności niezbędne do zarządzania
-                              zgłoszeniami i innymi aspektami IT. Nasz zespół ekspercki posiada głęboką wiedzę w
-                              dziedzinach front-end, back-end, a także w zakresie oprogramowania pośredniczącego, co
-                              umożliwia nam obsługę różnych języków programowania i platform.
+                         <div class="benefit_card_text">W TechReports stawiamy na podejście klientocentryczne, oferując pełne wsparcie 
+                              systemów IT, regularne prace utrzymaniowe i aktualizacje. Dbamy o to, aby nasze rozwiązania były stale 
+                              ulepszane i dostosowywane do rosnących potrzeb rynku.
                          </div>
                     </div>
                     <div class="benefit_card">
                          <div class="benefit_card_number">
                               <span class="number_card">4</span>
                          </div>
-                         <div class="benefit_card_title">Dostęp do Specjalistycznych Talentów IT
+                         <div class="benefit_card_title">Bezpieczeństwo w IT
                          </div>
-                         <div class="benefit_card_text">TechReports specjalizuje się w różnorodnych technologiach IT.
-                              Pomagamy organizacjom szybko zdobyć specjalistyczne umiejętności niezbędne do zarządzania
-                              zgłoszeniami i innymi aspektami IT. Nasz zespół ekspercki posiada głęboką wiedzę w
-                              dziedzinach front-end, back-end, a także w zakresie oprogramowania pośredniczącego, co
-                              umożliwia nam obsługę różnych języków programowania i platform.
+                         <div class="benefit_card_text">Jako firma zajmująca się zgłoszeniami i innymi aspektami IT, kładziemy nacisk na
+                               bezpieczeństwo i prywatność danych. Wszystkie nasze rozwiązania są projektowane z myślą o ochronie danych,
+                                jednocześnie zachowując ich wysoką funkcjonalność i użyteczność.
                          </div>
                     </div>
                     <div class="benefit_card">
                          <div class="benefit_card_number">
                               <span class="number_card">5</span>
                          </div>
-                         <div class="benefit_card_title">Dostęp do Specjalistycznych Talentów IT
+                         <div class="benefit_card_title">Szybkość Wprowadzania Rozwiązań IT na Rynek
                          </div>
-                         <div class="benefit_card_text">TechReports specjalizuje się w różnorodnych technologiach IT.
-                              Pomagamy organizacjom szybko zdobyć specjalistyczne umiejętności niezbędne do zarządzania
-                              zgłoszeniami i innymi aspektami IT. Nasz zespół ekspercki posiada głęboką wiedzę w
-                              dziedzinach front-end, back-end, a także w zakresie oprogramowania pośredniczącego, co
-                              umożliwia nam obsługę różnych języków programowania i platform.
+                         <div class="benefit_card_text">Nasi inżynierowie, projektanci UI/UX, eksperci ds. zapewnienia jakości i kierownicy 
+                              projektów są przygotowani do szybkiego rozpoczęcia pracy nad Twoim projektem IT. Dzięki naszej dużej puli 
+                              specjalistów, jesteśmy w stanie szybko dostosować się do potrzeb Twojego projektu, co przyspiesza wprowadzenie
+                               Twoich rozwiązań na rynek.
                          </div>
                     </div>
                     <div class="benefit_card">
                          <div class="benefit_card_number">
                               <span class="number_card">6</span>
                          </div>
-                         <div class="benefit_card_title">Dostęp do Specjalistycznych Talentów IT
+                         <div class="benefit_card_title">Przewaga dzięki AI i Analityce Biznesowej w IT
                          </div>
-                         <div class="benefit_card_text">TechReports specjalizuje się w różnorodnych technologiach IT.
-                              Pomagamy organizacjom szybko zdobyć specjalistyczne umiejętności niezbędne do zarządzania
-                              zgłoszeniami i innymi aspektami IT. Nasz zespół ekspercki posiada głęboką wiedzę w
-                              dziedzinach front-end, back-end, a także w zakresie oprogramowania pośredniczącego, co
-                              umożliwia nam obsługę różnych języków programowania i platform.
+                         <div class="benefit_card_text">Wykorzystujemy AI i analitykę biznesową do optymalizacji zarządzania zgłoszeniami
+                               i innymi procesami IT. Nasze narzędzia pozwolą Ci lepiej zrozumieć dane związane z cyklem życia Twoich 
+                               rozwiązań IT, co przekłada się na lepsze decyzje biznesowe. Nasze rozwiązania AI pomagają także w 
+                               automatyzacji powtarzalnych zadań, zwiększając efektywność pracy zespołów IT.
                          </div>
                     </div>
                </div>
