--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
      <link rel="stylesheet" href="css/aboutUs.css">
      <link rel="stylesheet" href="css/contact.css">
      <link rel="stylesheet" href="css/services.css">
+     <link rel="stylesheet" href="css/log.css">
 </head>
 
 <body>
@@ -28,20 +29,14 @@
                          <li><a href="pages/technologies.html" class="nav_link">Technologie</a></li>
                          <li><a href="pages/contact.html" class="nav_link">Kontakt</a></li>
                          <li><a href="pages/about.html" class="nav_link">O nas</a></li>
+                         <li><a href="pages/log.html" class="nav_link">Zaloguj się</a></li>
                     </ul>
                     <div class="menu_toggle">
                          <span class="bar"></span>
                          <span class="bar"></span>
                          <span class="bar"></span>
                     </div>
-                    <div class="search-icon">
-                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"
-                              class="icon-size">
-                              <path fill-rule="evenodd"
-                                   d="M10.5 3.75a6.75 6.75 0 100 13.5 6.75 6.75 0 000-13.5zM2.25 10.5a8.25 8.25 0 1114.59 5.28l4.69 4.69a.75.75 0 11-1.06 1.06l-4.69-4.69A8.25 8.25 0 012.25 10.5z"
-                                   clip-rule="evenodd" />
-                         </svg>
-                    </div>
+                    
                </nav>
           </nav>
      </header>
