--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
                          <li><a href="pages/technologies.html" class="nav_link">Technologie</a></li>
                          <li><a href="pages/contact.html" class="nav_link">Kontakt</a></li>
                          <li><a href="pages/about.html" class="nav_link">O nas</a></li>
-                         <li><a href="pages/log.html" class="nav_link">Zaloguj się</a></li>
+                         <li><a id="loginLink" href="pages/log.html" class="nav_link">Zaloguj się</a></li>
+
+                         <!-- <li><a href="pages/log.html" class="nav_link">Zaloguj się</a></li> -->
                     </ul>
                     <div class="menu_toggle">
                          <span class="bar"></span>
@@ -146,6 +148,7 @@
      <script src="jQuery/dynamicList.js"></script>
      <script src="jQuery/logoCarousel.js"></script>
 
+     <script src="./js/isLogin.js"></script>
      <script src="js/pageLoader.js"></script>
      <script src="js/dynamicWord.js"></script>
      <script src="js/scrollToTop.js"></script>
