--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
      <script src="js/script_mobile_icon.js"></script>
 
 
-     <script src="ajax/getTime.js"></script>
+     <!-- <script src="ajax/getTime.js"></script> -->
      <button id="button_scroll_to_top" title="Przewiń do góry">↑</button>
 </body>
 
