--- a/pages/profile.html
+++ b/pages/profile.html
@@ -8,7 +8,14 @@
 
 <body>
      <div class="profile_page">
-         hehe
-         alsls
+          <section class="user-profile">
+               <h2>Profil Użytkownika</h2>
+               <div class="user-info">
+                   <p>Imię: <span id="firstName"></span></p>
+                   <p>Nazwisko: <span id="lastName"></span></p>
+                   <p>Email: <span id="email"></span></p>
+                   <!-- Możesz dodać więcej pól zależnie od dostępnych danych użytkownika -->
+               </div>
+           </section>
      </div>
 </body>
