--- a/index.html
+++ b/index.html
@@ -149,6 +149,8 @@
      <script src="jQuery/logoCarousel.js"></script>
 
      <script src="./js/isLogin.js"></script>
+     <script src="./js/registration.js"></script>
+     <script src="./js/profile.js"></script>
      <script src="js/pageLoader.js"></script>
      <script src="js/dynamicWord.js"></script>
      <script src="js/scrollToTop.js"></script>
