--- a/pages/log.html
+++ b/pages/log.html
@@ -40,7 +40,7 @@
                     <div class="form-container">
                          <div class="form-box" id="register">
                               <h2>Zarejestruj się</h2>
-                              <form action="http://localhost/TechReports/php/register.php" method="post">
+                              <form id="registrationForm" action="http://localhost/TechReports/php/register.php" method="post">
                                    <input type="text" name="firstname" placeholder="Imię">
                                    <input type="text" name="lastname" placeholder="Nazwisko">
                                    <input type="email" name="email" placeholder="Email" required>
