--- a/pages/profile.html
+++ b/pages/profile.html
@@ -14,8 +14,13 @@
                    <p>Imię: <span id="firstName"></span></p>
                    <p>Nazwisko: <span id="lastName"></span></p>
                    <p>Email: <span id="email"></span></p>
+                   <p>Email: <span id="country"></span></p>
+                   <p>Email: <span id="city"></span></p>
+                   <p>Email: <span id="created_at"></span></p>
                    <!-- Możesz dodać więcej pól zależnie od dostępnych danych użytkownika -->
                </div>
+               <button id="logoutButton">Wyloguj</button>
            </section>
+
      </div>
 </body>
