--- a/pages/profile.html
+++ b/pages/profile.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html lang="pl">
-
 <head>
-     <title>TechReports</title>
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TechReports</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-
 <body>
-     <div class="profile_page">
-          <section class="user-profile">
-               <h2>Profil Użytkownika</h2>
-               <div class="user-info">
-                   <p>Imię: <span id="firstName"></span></p>
-                   <p>Nazwisko: <span id="lastName"></span></p>
-                   <p>Email: <span id="email"></span></p>
-                   <p>Email: <span id="country"></span></p>
-                   <p>Email: <span id="city"></span></p>
-                   <p>Email: <span id="created_at"></span></p>
-                   <!-- Możesz dodać więcej pól zależnie od dostępnych danych użytkownika -->
-               </div>
-               <button id="logoutButton">Wyloguj</button>
-           </section>
+    <div class="profile_page">
+        <section class="user-profile">
+            <h2>Profil Użytkownika</h2>
+            <form id="editProfileForm">
+                <input type="text" id="editFirstName" name="firstname" placeholder="Imię">
+                <input type="text" id="editLastName" name="lastname" placeholder="Nazwisko">
+                <input type="email" id="editEmail" name="email" placeholder="Email">
+                <input type="text" id="editCountry" name="country" placeholder="Kraj">
+                <input type="text" id="editCity" name="city" placeholder="Miasto">
+                <input type="text" id="created_at" name="created_at" placeholder="Data utworzenia" readonly>
+                <button type="submit">Zapisz zmiany</button>
+            </form>
+            <button id="deleteProfileButton">Usuń profil</button>
+            <button id="logoutButton">Wyloguj</button>
+        </section>
+    </div>
 
-     </div>
 </body>
+</html>
