messages - send with file

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
      <link rel="stylesheet" href="css/contact.css">
      <link rel="stylesheet" href="css/services.css">
      <link rel="stylesheet" href="css/log.css">
+     <link rel="stylesheet" href="css/profile.css">
 </head>
 
 <body>
@@ -29,9 +30,8 @@
                          <li><a href="pages/technologies.html" class="nav_link">Technologie</a></li>
                          <li><a href="pages/contact.html" class="nav_link">Kontakt</a></li>
                          <li><a href="pages/about.html" class="nav_link">O nas</a></li>
-                         <li><a id="loginLink" href="pages/log.html" class="nav_link">Zaloguj się</a></li>
+                         <li><a id="loginLink" href="pages/log.html" class="nav_link">Konto</a></li>
 
-                         <!-- <li><a href="pages/log.html" class="nav_link">Zaloguj się</a></li> -->
                     </ul>
                     <div class="menu_toggle">
                          <span class="bar"></span>
@@ -148,6 +148,7 @@
      <script src="jQuery/dynamicList.js"></script>
      <script src="jQuery/logoCarousel.js"></script>
 
+     <script src="./js/sendMessage.js"></script>
      <script src="./js/isLogin.js"></script>
      <script src="./js/registration.js"></script>
      <script src="./js/profile.js"></script>
