--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
      <script src="jQuery/dynamicList.js"></script>
      <script src="jQuery/logoCarousel.js"></script>
 
+     <script src="./js/displayMessages.js"></script>
      <script src="./js/sendMessage.js"></script>
      <script src="./js/isLogin.js"></script>
      <script src="./js/registration.js"></script>
