--- a/pages/log.html
+++ b/pages/log.html
@@ -45,8 +45,7 @@
                                    <input type="text" name="lastname" placeholder="Nazwisko">
                                    <input type="email" name="email" placeholder="Email" required>
                                    <input type="password" name="password" placeholder="Password" required>
-                                   <input type="text" name="country" placeholder="Kraj">
-                                   <input type="text" name="city" placeholder="Miasto">
+                                   <input type="text" name="phone" placeholder="Telefon">
                                    <input type="submit" value="Zarejestruj się">
                                    <div class="switch">
                                         Masz już konto? <a href="#login">Zaloguj się</a>
