--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
      <link rel="preconnect" href="https://fonts.googleapis.com">
      <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
           rel="stylesheet">
+          <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet"/>
+         
+      
 
      <link rel="stylesheet" href="css/style.css">
      <link rel="stylesheet" href="css/styleHeader.css">
@@ -18,6 +21,7 @@
      <link rel="stylesheet" href="css/services.css">
      <link rel="stylesheet" href="css/log.css">
      <link rel="stylesheet" href="css/profile.css">
+     <link rel="stylesheet" href="css/Toast.css">
 </head>
 
 <body>
@@ -139,6 +143,7 @@
           <div id="clock"></div>
           <p class="copyright">© 2023 TechReports</p>
      </footer>
+     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script> -->
      <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
 
      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-animateNumber/0.0.14/jquery.animateNumber.min.js"></script>
@@ -148,6 +153,7 @@
      <script src="jQuery/dynamicList.js"></script>
      <script src="jQuery/logoCarousel.js"></script>
 
+     <script src="./js/Toast.js"></script>
      <script src="./js/displayMessages.js"></script>
      <script src="./js/sendMessage.js"></script>
      <script src="./js/isLogin.js"></script>
