--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
      <link rel="stylesheet" href="css/log.css">
      <link rel="stylesheet" href="css/profile.css">
      <link rel="stylesheet" href="css/Toast.css">
+     <link rel="stylesheet" href="css/basket.css">
 </head>
 
 <body>
@@ -30,7 +31,7 @@
                <h1 class="logo"><a href="index.html">TechReports</a></h1>
                <nav class="nav_menu">
                     <ul class="nav_item">
-                         <li><a href="pages/services.html" class="nav_link">Usługi</a></li>
+                         <li><a href="pages/servicesShop.html" class="nav_link">Usługi</a></li>
                          <li><a href="pages/technologies.html" class="nav_link">Technologie</a></li>
                          <li><a href="pages/contact.html" class="nav_link">Kontakt</a></li>
                          <li><a href="pages/about.html" class="nav_link">O nas</a></li>
@@ -154,6 +155,7 @@
      <script src="jQuery/logoCarousel.js"></script>
 
      <script src="./js/Toast.js"></script>
+     <script src="./js/basket.js"></script>
      <script src="./js/displayMessages.js"></script>
      <script src="./js/sendMessage.js"></script>
      <script src="./js/isLogin.js"></script>
