--- a/pages/profile.html
+++ b/pages/profile.html
@@ -11,7 +11,6 @@
           <section class="user-profile">
                <div class="profile_container_outside">
                     <div class="profile_container">
-
                          <h2>Profil Użytkownika</h2>
                          <form id="editProfileForm">
                               <label for="editFirstName">Imię:</label>
@@ -48,14 +47,12 @@
                               <button type="submit">Zapisz zmiany</button>
                          </form>
                     </div>
-
+                    <div id="buttony">
+                         <button id="deleteProfileButton">Usuń profil</button>
+                         <button id="logoutButton">Wyloguj</button>
+                    </div>
                </div>
-              
-               <button id="deleteProfileButton">Usuń profil</button>
-               <button id="logoutButton">Wyloguj</button>
-
-
-
+               
           </section>
           <section class="message-section">
                <form id="messageForm">
