--- a/pages/servicesShop.html
+++ b/pages/servicesShop.html
@@ -9,13 +9,20 @@
 <body>
      <div class="servicesShop_page">
           <h1>Usługi Informatyczne</h1>
-    <div id="uslugi">
-    </div>
 
-    <h2>Koszyk</h2>
-    <div id="koszyk">
-    </div>
-    <button id="zlozZamowienie">Złóż zamówienie</button>
+    <form id="uslugiForm">
+     <div class="usluga">
+         <span>Konsultacja IT - 100 PLN</span>
+         <button type="button" class="dodajButton" data-id="1">Dodaj</button>
+     </div>
+     <div class="usluga">
+         <span>Naprawa komputera - 200 PLN</span>
+         <button type="button" class="dodajButton" data-id="2">Dodaj</button>
+     </div>
+ </form>
+ <div id="koszyk"></div>
+ <button id="zlozZamowienie">Złóż zamówienie</button>
+ 
 
      </div>
 </body>
